--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "date-fns": "^2.21.3",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
