--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-datepicker": "^4.1.0",
     "react-dom": "^17.0.2",
+    "react-js-pagination": "^3.0.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
